fix(home): PreMiD logo squash

--- a/src/stylesheets/components/container.scss
+++ b/src/stylesheets/components/container.scss
@@ -1676,6 +1676,7 @@
 	.promo-container {
 		.heading__logo img {
 			width: 80vw !important;
+			height: auto !important;
 			max-width: 100%;
 		}
 
